# anidb-api-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml  flake.nix
.cargo/: audit.toml
examples/: get_anime.rs
src/: lib.rs
src/http/: client.rs  mod.rs
src/http/models/: mod.rs
src/http/models/anime/: anime.rs  anime_related.rs  anime_similar.rs  character.rs  creator.rs  episode.rs  mod.rs  recommendation.rs  resource.rs  tag.rs
src/http/models/common/: enums.rs  error.rs  mod.rs  ratings.rs  title.rs
