[package]
name = "anidb-api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dmitriy <ataraxiadev@ataraxiadev.com>"]
description = "Rust library that provides wrapper for AniDB API"
repository = "https://github.com/AtaraxiaSjel/anidb-api-rs"
readme = "README.md"
exclude = [
  ".cargo",
  ".envrc",
  "deny.toml",
  "flake.nix",
  "flake.lock",
  "taplo.toml",
]

[dependencies]
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
tokio = "1.44.2"
tracing-subscriber = "0.3.19"

[lints.rust]
unsafe_code = "forbid"
warnings = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
