[package]
name = "anidb-api"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dmitriy <ataraxiadev@ataraxiadev.com>"]
description = "Rust library that provides wrapper for AniDB API"
repository = "https://github.com/AtaraxiaSjel/anidb-api-rs"
readme = "README.md"
exclude = [
  ".cargo",
  ".envrc",
  "deny.toml",
  "flake.nix",
  "flake.lock",
  "taplo.toml",
]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
governor = "0.10.0"
http = "1.3.1"
http-serde = "2.1.1"
reqwest = { version = "0.12.15", features = ["gzip"] }
reqwest-middleware = "0.4.2"
reqwest-ratelimit = "0.3.0"
reqwest-tracing = "0.5.7"
serde = { version = "1.0.219", features = ["derive"] }
serde-xml-rs = "0.7.0"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"
warnings = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
